# libui-dev

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Doxyfile  Makefile  README.md  annotated.html  bug.html  cross.mk  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  doxygen_crawl.html  examples.mk  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_u.html  group__button.html  group__container.html  group__data_entry.html  group__dialog_window.html  group__menu.html  group__static.html  group__table.html  hierarchy.html  index.html  index_8md.html  libui.pc.in  menudata.js  meson.build  mingw-install  pages.html  structui_area_draw_params-members.html  structui_area_draw_params.html  structui_area_handler-members.html  (+94 more)
.github/workflows/: doxygen.yml
common/: OLD_table.c  areaevents.c  attribute.c  attrlist.c  attrstr.c  control.c  controlsigs.h  debug.c  matrix.c  opengl.c  opentype.c  shouldquit.c  table.c  tablemodel.c  tablevalue.c  uipriv.h  userbugs.c
const/: const.c  const.h  const.txt  json.c
darwin/: draw.m  main.m  meson.build  uipriv_darwin.h  util.m
doc/: DoxygenLayout.xml  index.md
example/: a.c  a.rc  custom.c  drawtext.c  main.c
examples/: example.manifest  meson.build
examples/const/: const.c
examples/controlgallery/: main.c
examples/crash/: main.c
examples/ide/: Makefile  favicon.h  libuilua.c  test.c  test.lua
examples/opengl/: main.c
extras/: 143.diff  204.diff  209.diff  224.diff  245.diff  257.diff  261.diff  266.diff  289.diff  290.diff  295.diff  386.diff  405.diff  Makefile  darwin.cmake  examples.mk  favicon.c  label.c  md_area.c  onfilesdropped.diff  scroll.cpp  scroll2.cpp  win_init.cpp
extras/favicon/: darwin.c  linux.c  win.cpp
extras/image/: image.c
extras/scintilla/: Makefile  cross.mk  demo.c  gtk.cpp  libui.manifest  ui_scintilla.h  win.cxx  win.txt  x.c
ide/: Makefile  a.rc  demo.h  ide.res  libuilua.c  test.c  winmak
include/: ui.h  ui_doc.h  ui_extras.h  ui_safe.h
libui-ng/windows/: init.cpp
qt5/: alloc.cpp  area.cpp  attrstr.h  box.cpp  button.cpp  checkbox.cpp  combobox.cpp  control.cpp  datetimepicker.cpp  debug.cpp  draw.cpp  drawmatrix.cpp  drawpath.cpp  drawtext.cpp  editablecombo.cpp  entry.cpp  fontbutton.cpp  form.cpp  grid.cpp  group.cpp  label.cpp  main.cpp  menu.cpp  multilineentry.cpp  progressbar.cpp  radiobuttons.cpp  separator.cpp  slider.cpp  spinbox.cpp  stddialogs.cpp  tab.cpp  table.cpp  text.cpp  uipriv_qt5.hpp  window.cpp
search/: all_11.js  all_12.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_b.js  all_d.js  classes_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_1.js  functions_0.js  groups_1.js  groups_3.js  groups_7.js  pages_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_10.js  variables_12.js  variables_14.js  variables_15.js  variables_16.js  variables_3.js  variables_6.js  variables_7.js  variables_8.js  variables_b.js  variables_c.js
test/: meson.build  test.h
test/qa/: meson.build  qa.h
test/unit/: init.c  meson.build  unit.h
unix/: areacommon.c  datetimepicker.c  meson.build  openglarea.c  openglarea_orig.c  uipriv_unix.h  util.c  window.c
windows/: area.hpp  areadraw.cpp  draw.hpp  drawpath.cpp  entry.cpp  init.cpp  meson.build  tab.cpp  table.cpp  uipriv_windows.hpp  winutil.cpp
